# study-Pico-rust

./: Cargo.toml  README.md
.cargo/: config.toml
src/: helloworld.rs  led.rs
